legacy/fury-on-eks/manifests/opa/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Gatekeeper Policy Manager"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/sighupio/gatekeeper-policy-manager/master/app/static-content/logo.svg"
  name: gpm
  namespace: gatekeeper-system
spec:
  ingressClassName: nginx
  rules:
    - host: gpm.fury.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatekeeper-policy-manager
                port:
                  name: http
